--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!--Header section-->
-    <header class="header">
+    <!-- <header class="header">
       <div class="page-header conteiner">
         <nav class="navigation">
           <a class="logo link" href="./index.html"
@@ -36,9 +36,9 @@
               <a class="menu-link link" href="#contacts">Contacts</a>
             </li>
           </ul>
-        </nav>
-        <!--Contacts-->
-        <address class="contacts">
+        </nav> -->
+    <!--Contacts-->
+    <!-- <address class="contacts">
           <ul class="contacts-list list">
             <li class="contact">
               <a class="contact-link link" href="mailto:info@devstudio.com"
@@ -53,17 +53,17 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
       <!--Order Service section-->
-      <section class="hero section">
+      <!-- <section class="hero section">
         <div class="conteiner">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="modal-btn" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <!--Features section-->
       <section class="features-section section">
         <div class="conteiner">
@@ -123,7 +123,7 @@
         </div>
       </section>
       <!--Work section-->
-      <section class="section">
+      <!-- <section class="work-section section">
         <div class="conteiner">
           <h2 class="section-title">What are we doing</h2>
           <ul class="work-section-list list">
@@ -153,9 +153,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--Team section-->
-      <section class="team-section section">
+      <!-- <section class="team-section section">
         <div class="conteiner">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-section-list list">
@@ -425,9 +425,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Customers section -->
-      <section class="customers-section section">
+      <!-- <section class="customers-section section">
         <div class="conteiner">
           <h2 class="section-title">Customers</h2>
           <ul class="customers-list list">
@@ -475,10 +475,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!--Footer section-->
-    <footer class="footer section">
+    <!-- <footer class="footer section">
       <div class="footer-wrapper conteiner">
         <div class="footer-logo">
           <a class="link logo-dark-theme" href="./index.html"
@@ -565,7 +565,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button data-modal-close type="button" class="modal-close-btn">
