--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
     </header> -->
     <main>
       <!--Order Service section-->
-      <!-- <section class="hero section">
+      <section class="hero section">
         <div class="conteiner">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="modal-btn" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <!--Features section-->
       <section class="features-section section">
         <div class="conteiner">
@@ -155,7 +155,7 @@
         </div>
       </section> -->
       <!--Team section-->
-      <!-- <section class="team-section section">
+      <section class="team-section section">
         <div class="conteiner">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-section-list list">
@@ -425,9 +425,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Customers section -->
-      <!-- <section class="customers-section section">
+      <section class="customers-section section">
         <div class="conteiner">
           <h2 class="section-title">Customers</h2>
           <ul class="customers-list list">
@@ -475,10 +475,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!--Footer section-->
-    <!-- <footer class="footer section">
+    <footer class="footer section">
       <div class="footer-wrapper conteiner">
         <div class="footer-logo">
           <a class="link logo-dark-theme" href="./index.html"
@@ -565,8 +565,8 @@
           </form>
         </div>
       </div>
-    </footer> -->
-    <div class="backdrop is-hidden" data-modal>
+    </footer>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button data-modal-close type="button" class="modal-close-btn">
           <svg class="modal-icon" width="8" height="8">
@@ -631,7 +631,7 @@
           <button class="order-form-btn" type="submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/inputmask@5.0.7/dist/jquery.inputmask.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@4.0.0-beta.0/lib/bodyScrollLock.min.js"></script>
