--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!--Header section-->
-    <!-- <header class="header">
+    <header class="header">
       <div class="page-header conteiner">
         <nav class="navigation">
           <a class="logo link" href="./index.html"
@@ -36,9 +36,9 @@
               <a class="menu-link link" href="#contacts">Contacts</a>
             </li>
           </ul>
-        </nav> -->
-    <!--Contacts-->
-    <!-- <address class="contacts">
+        </nav>
+        <!--Contacts-->
+        <address class="contacts">
           <ul class="contacts-list list">
             <li class="contact">
               <a class="contact-link link" href="mailto:info@devstudio.com"
@@ -52,8 +52,13 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="menu-toggle">
+          <svg class="menu-toggle-icon" width="32" height="22">
+            <use href="./images/sprite.svg#menu"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+    </header>
     <main>
       <!--Order Service section-->
       <section class="hero section">
@@ -123,7 +128,7 @@
         </div>
       </section>
       <!--Work section-->
-      <!-- <section class="work-section section">
+      <section class="work-section section">
         <div class="conteiner">
           <h2 class="section-title">What are we doing</h2>
           <ul class="work-section-list list">
@@ -153,7 +158,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Team section-->
       <section class="team-section section">
         <div class="conteiner">
@@ -566,7 +571,7 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button data-modal-close type="button" class="modal-close-btn">
           <svg class="modal-icon" width="8" height="8">
@@ -631,7 +636,7 @@
           <button class="order-form-btn" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/inputmask@5.0.7/dist/jquery.inputmask.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/body-scroll-lock@4.0.0-beta.0/lib/bodyScrollLock.min.js"></script>
