--- a/index.html
+++ b/index.html
@@ -650,26 +650,28 @@
           <use href="./images/sprite.svg#icon-close-black"></use>
         </svg>
       </button>
-      <ul class="menu list">
+      <ul class="menu-mobile list">
         <li class="menu-item">
-          <a class="menu-link link current" href="./index.html">Studio</a>
+          <a class="menu-link link" href="./index.html">Studio</a>
         </li>
         <li class="menu-item">
           <a class="menu-link link" href="./portfolio.html">Portfolio</a>
         </li>
         <li class="menu-item">
-          <a class="menu-link link" href="#contacts">Contacts</a>
+          <a class="menu-link link menu-link-current" href="#contacts"
+            >Contacts</a
+          >
         </li>
       </ul>
-      <ul class="contacts-list list">
+      <ul class="contacts-list-mobile list">
         <li class="contact">
-          <a class="contact-link link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
+          <a class="contact-link link current" href="tel:+11(000)1111111"
+            >+11 (000) 111-11-11</a
           >
         </li>
         <li class="contact">
-          <a class="contact-link link" href="tel:+11(000)1111111"
-            >+11 (000) 111-11-11</a
+          <a class="contact-link link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
           >
         </li>
       </ul>
