--- a/portfolio.html
+++ b/portfolio.html
@@ -54,6 +54,16 @@
             </li>
           </ul>
         </address>
+        <button
+          type="button"
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="menu-toggle-icon" width="32" height="22">
+            <use href="./images/sprite.svg#menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
@@ -377,5 +387,99 @@
         </div>
       </div>
     </footer>
+    <!-- Mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg class="modal-icon" width="8" height="8">
+          <use href="./images/sprite.svg#icon-close-black"></use>
+        </svg>
+      </button>
+      <ul class="menu-mobile list">
+        <li class="menu-item">
+          <a class="menu-link link" href="./index.html">Studio</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+        </li>
+        <li class="menu-item">
+          <a class="menu-link link menu-link-current" href="#contacts"
+            >Contacts</a
+          >
+        </li>
+      </ul>
+      <ul class="contacts-list-mobile list">
+        <li class="contact">
+          <a class="contact-link link current" href="tel:+11(000)1111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+        <li class="contact">
+          <a class="contact-link link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+      <ul class="social-list list">
+        <li class="social-list-item">
+          <a
+            class="social-list-link"
+            href="https://www.instagram.com/"
+            aria-label="Instagram"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg class="social-list-icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-list-item">
+          <a
+            class="social-list-link link"
+            href="https://twitter.com/"
+            aria-label="Twitter"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg class="social-list-icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-list-item">
+          <a
+            class="social-list-link link"
+            href="https://www.facebook.com/"
+            aria-label="Facebook"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg class="social-list-icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-list-item">
+          <a
+            class="social-list-link link"
+            href="https://www.linkedin.com/"
+            aria-label="Linkedin"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <svg class="social-list-icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
