--- a/index.html
+++ b/index.html
@@ -196,7 +196,11 @@
           <ul class="team-section-list list">
             <li class="emploee-card">
               <img
-                src="./images/team/mark-guerrero.jpg"
+                srcset="
+                  ./images/team/img-1_mob@1x.jpg 1x,
+                  ./images/team/img-1_mob@2x.jpg 2x
+                "
+                src="./images/team/img-1_mob@1x.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -262,7 +266,11 @@
             </li>
             <li class="emploee-card">
               <img
-                src="./images/team/tom-ford.jpg"
+                srcset="
+                  ./images/team/img-2_mob@1x.jpg 1x,
+                  ./images/team/img-2_mob@2x.jpg 2x
+                "
+                src="./images/team/img-1_mob@1x.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -328,7 +336,11 @@
             </li>
             <li class="emploee-card">
               <img
-                src="./images/team/camila-garcia.jpg"
+                srcset="
+                  ./images/team/img-3_mob@1x.jpg 1x,
+                  ./images/team/img-3_mob@2x.jpg 2x
+                "
+                src="./images/team/img-3_mob@1x.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -394,7 +406,11 @@
             </li>
             <li class="emploee-card">
               <img
-                src="./images/team/daniel-wilson.jpg"
+                srcset="
+                  ./images/team/img-4_mob@1x.jpg 1x,
+                  ./images/team/img-4_mob@2x.jpg 2x
+                "
+                src="./images/team/img-4_mob@1x.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
