--- a/portfolio.html
+++ b/portfolio.html
@@ -311,7 +311,7 @@
           </p>
         </div>
         <div class="footer-social-media">
-          <p class="footer-social-title">Social media</p>
+          <p class="footer-title">Social media</p>
           <ul class="footer-social-list list">
             <li class="footer-social-list-item">
               <a
