--- a/portfolio.html
+++ b/portfolio.html
@@ -87,10 +87,19 @@
               <a class="portfolio-link link" href="">
                 <div class="portfolio-thumb">
                   <img
-                    class="portfolio-img"
+                    srcset="
+                      ./images/work-portfolio/img-1_356.jpg 356w,
+                      ./images/work-portfolio/img-1_360.jpg 360w,
+                      ./images/work-portfolio/img-1_396.jpg 396w,
+                      ./images/work-portfolio/img-1_712.jpg 712w,
+                      ./images/work-portfolio/img-1_720.jpg 720w,
+                      ./images/work-portfolio/img-1_792.jpg 792w
+                    "
+                    sizes="(min-width: 1200px) 356px, (min-width: 768px) 360px, (min-width: 480px) 396px, 100vw"
+                    src="./images/work-portfolio/img-1_396.jpg"
                     src="./images/work-portfolio/banking-app-interface-concept.jpg"
                     alt="Banking App Interface Concept"
-                    width="360"
+                    width="396"
                     height="300"
                   />
                   <div class="portfolio-overlay">
@@ -113,9 +122,18 @@
               <a class="portfolio-link link" href="">
                 <div class="portfolio-thumb">
                   <img
-                    src="./images/work-portfolio/cashless-payment.jpg"
+                    srcset="
+                      ./images/work-portfolio/img-2_356.jpg 356w,
+                      ./images/work-portfolio/img-2_360.jpg 360w,
+                      ./images/work-portfolio/img-2_396.jpg 396w,
+                      ./images/work-portfolio/img-2_712.jpg 712w,
+                      ./images/work-portfolio/img-2_720.jpg 720w,
+                      ./images/work-portfolio/img-2_792.jpg 792w
+                    "
+                    sizes="(min-width: 1200px) 356px, (min-width: 768px) 360px, (min-width: 480px) 396px, 100vw"
+                    src="./images/work-portfolio/img-2_396.jpg"
                     alt="Cashless Payment"
-                    width="360"
+                    width="396"
                     height="300"
                   />
                   <div class="portfolio-overlay">
@@ -136,9 +154,18 @@
               <a class="portfolio-link link" href="">
                 <div class="portfolio-thumb">
                   <img
-                    src="./images/work-portfolio/meditaion-app.jpg"
+                    srcset="
+                      ./images/work-portfolio/img-3_356.jpg 356w,
+                      ./images/work-portfolio/img-3_360.jpg 360w,
+                      ./images/work-portfolio/img-3_396.jpg 396w,
+                      ./images/work-portfolio/img-3_712.jpg 712w,
+                      ./images/work-portfolio/img-3_720.jpg 720w,
+                      ./images/work-portfolio/img-3_792.jpg 792w
+                    "
+                    sizes="(min-width: 1200px) 356px, (min-width: 768px) 360px, (min-width: 480px) 396px, 100vw"
+                    src="./images/work-portfolio/img-3_396.jpg"
                     alt="Meditaion App"
-                    width="360"
+                    width="396"
                     height="300"
                   />
                   <div class="portfolio-overlay">
@@ -161,15 +188,15 @@
                 <div class="portfolio-thumb">
                   <img
                     srcset="
-                      ./images/work-portfolio/img-1_356.jpg 356w,
-                      ./images/work-portfolio/img-1_360.jpg 360w,
-                      ./images/work-portfolio/img-1_396.jpg 396w,
-                      ./images/work-portfolio/img-1_712.jpg 712w,
-                      ./images/work-portfolio/img-1_720.jpg 720w,
-                      ./images/work-portfolio/img-1_792.jpg 792w
+                      ./images/work-portfolio/img-4_356.jpg 356w,
+                      ./images/work-portfolio/img-4_360.jpg 360w,
+                      ./images/work-portfolio/img-4_396.jpg 396w,
+                      ./images/work-portfolio/img-4_712.jpg 712w,
+                      ./images/work-portfolio/img-4_720.jpg 720w,
+                      ./images/work-portfolio/img-4_792.jpg 792w
                     "
                     sizes="(min-width: 1200px) 356px, (min-width: 768px) 360px, (min-width: 480px) 396px, 100vw"
-                    src="./images/work-portfolio/img-1_356.jpg"
+                    src="./images/work-portfolio/img-4_396.jpg"
                     alt="Taxi Service"
                     width="396"
                     height="300"
@@ -192,9 +219,18 @@
               <a class="portfolio-link link" href="">
                 <div class="portfolio-thumb">
                   <img
-                    src="./images/work-portfolio/screen-illustrations.jpg"
+                    srcset="
+                      ./images/work-portfolio/img-5_356.jpg 356w,
+                      ./images/work-portfolio/img-5_360.jpg 360w,
+                      ./images/work-portfolio/img-5_396.jpg 396w,
+                      ./images/work-portfolio/img-5_712.jpg 712w,
+                      ./images/work-portfolio/img-5_720.jpg 720w,
+                      ./images/work-portfolio/img-5_792.jpg 792w
+                    "
+                    sizes="(min-width: 1200px) 356px, (min-width: 768px) 360px, (min-width: 480px) 396px, 100vw"
+                    src="./images/work-portfolio/img-5_396.jpg"
                     alt="Screen Illustrations"
-                    width="360"
+                    width="396"
                     height="300"
                   />
                   <div class="portfolio-overlay">
@@ -215,9 +251,18 @@
               <a class="portfolio-link link" href=""
                 ><div class="portfolio-thumb">
                   <img
-                    src="./images/work-portfolio/online-courses.jpg"
+                    srcset="
+                      ./images/work-portfolio/img-6_356.jpg 356w,
+                      ./images/work-portfolio/img-6_360.jpg 360w,
+                      ./images/work-portfolio/img-6_396.jpg 396w,
+                      ./images/work-portfolio/img-6_712.jpg 712w,
+                      ./images/work-portfolio/img-6_720.jpg 720w,
+                      ./images/work-portfolio/img-6_792.jpg 792w
+                    "
+                    sizes="(min-width: 1200px) 356px, (min-width: 768px) 360px, (min-width: 480px) 396px, 100vw"
+                    src="./images/work-portfolio/img-6_396.jpg"
                     alt="Online Courses"
-                    width="360"
+                    width="396"
                     height="300"
                   />
                   <div class="portfolio-overlay">
@@ -238,9 +283,18 @@
               <a class="portfolio-link link" href=""
                 ><div class="portfolio-thumb">
                   <img
-                    src="./images/work-portfolio/instagram-stories-concept.jpg"
+                    srcset="
+                      ./images/work-portfolio/img-7_356.jpg 356w,
+                      ./images/work-portfolio/img-7_360.jpg 360w,
+                      ./images/work-portfolio/img-7_396.jpg 396w,
+                      ./images/work-portfolio/img-7_712.jpg 712w,
+                      ./images/work-portfolio/img-7_720.jpg 720w,
+                      ./images/work-portfolio/img-7_792.jpg 792w
+                    "
+                    sizes="(min-width: 1200px) 356px, (min-width: 768px) 360px, (min-width: 480px) 396px, 100vw"
+                    src="./images/work-portfolio/img-7_396.jpg"
                     alt="Instagram Stories Concept"
-                    width="360"
+                    width="396"
                     height="300"
                   />
                   <div class="portfolio-overlay">
@@ -261,7 +315,16 @@
               <a class="portfolio-link link" href=""
                 ><div class="portfolio-thumb">
                   <img
-                    src="./images/work-portfolio/organic-food.jpg"
+                    srcset="
+                      ./images/work-portfolio/img-8_356.jpg 356w,
+                      ./images/work-portfolio/img-8_360.jpg 360w,
+                      ./images/work-portfolio/img-8_396.jpg 396w,
+                      ./images/work-portfolio/img-8_712.jpg 712w,
+                      ./images/work-portfolio/img-8_720.jpg 720w,
+                      ./images/work-portfolio/img-8_792.jpg 792w
+                    "
+                    sizes="(min-width: 1200px) 356px, (min-width: 768px) 360px, (min-width: 480px) 396px, 100vw"
+                    src="./images/work-portfolio/img-8_396.jpg"
                     alt="Organic Food"
                     width="360"
                     height="300"
@@ -284,7 +347,16 @@
               <a class="portfolio-link link" href=""
                 ><div class="portfolio-thumb">
                   <img
-                    src="./images/work-portfolio/fresh-coffee.jpg"
+                    srcset="
+                      ./images/work-portfolio/img-9_356.jpg 356w,
+                      ./images/work-portfolio/img-9_360.jpg 360w,
+                      ./images/work-portfolio/img-9_396.jpg 396w,
+                      ./images/work-portfolio/img-9_712.jpg 712w,
+                      ./images/work-portfolio/img-9_720.jpg 720w,
+                      ./images/work-portfolio/img-9_792.jpg 792w
+                    "
+                    sizes="(min-width: 1200px) 356px, (min-width: 768px) 360px, (min-width: 480px) 396px, 100vw"
+                    src="./images/work-portfolio/img-9_396.jpg"
                     alt="Fresh Coffee"
                     width="360"
                     height="300"
