--- a/portfolio.html
+++ b/portfolio.html
@@ -164,7 +164,7 @@
                     "
                     sizes="(min-width: 1200px) 356px, (min-width: 768px) 360px, (min-width: 480px) 396px, 100vw"
                     src="./images/work-portfolio/img-3_396.jpg"
-                    alt="Meditaion App"
+                    alt="Banking App Interface Concept"
                     width="396"
                     height="300"
                   />
@@ -176,7 +176,6 @@
                     </p>
                   </div>
                 </div>
-
                 <div class="txt-portfolio">
                   <h2 class="section-subtitle">Meditaion App</h2>
                   <p class="section-description">App</p>
@@ -326,7 +325,7 @@
                     sizes="(min-width: 1200px) 356px, (min-width: 768px) 360px, (min-width: 480px) 396px, 100vw"
                     src="./images/work-portfolio/img-8_396.jpg"
                     alt="Organic Food"
-                    width="360"
+                    width="396"
                     height="300"
                   />
                   <div class="portfolio-overlay">
@@ -358,7 +357,7 @@
                     sizes="(min-width: 1200px) 356px, (min-width: 768px) 360px, (min-width: 480px) 396px, 100vw"
                     src="./images/work-portfolio/img-9_396.jpg"
                     alt="Fresh Coffee"
-                    width="360"
+                    width="396"
                     height="300"
                   />
                   <div class="portfolio-overlay">
