--- a/index.html
+++ b/index.html
@@ -531,72 +531,75 @@
     <!--Footer section-->
     <footer class="footer section">
       <div class="footer-wrapper conteiner">
-        <div class="footer-logo">
-          <a class="link logo-dark-theme" href="./index.html"
-            ><span class="logo-color-web">Web</span>Studio</a
-          >
-          <p class="section-description section-description-footer">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+        <div class="footer-conteiner">
+          <div class="footer-logo">
+            <a class="link logo-dark-theme" href="./index.html"
+              ><span class="logo-color-web">Web</span>Studio</a
+            >
+            <p class="section-description section-description-footer">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-social-media">
+            <p class="footer-title">Social media</p>
+            <ul class="footer-social-list list">
+              <li class="footer-social-list-item">
+                <a
+                  class="footer-social-list-link"
+                  href="https://www.instagram.com/"
+                  aria-label="Instagram"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <svg class="footer-social-list-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-list-item">
+                <a
+                  class="footer-social-list-link link"
+                  href="https://twitter.com/"
+                  aria-label="Twitter"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <svg class="footer-social-list-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-list-item">
+                <a
+                  class="footer-social-list-link link"
+                  href="https://www.facebook.com/"
+                  aria-label="Facebook"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <svg class="footer-social-list-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-list-item">
+                <a
+                  class="footer-social-list-link link"
+                  href="https://www.linkedin.com/"
+                  aria-label="Linkedin"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <svg class="footer-social-list-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="footer-social-media">
-          <p class="footer-title">Social media</p>
-          <ul class="footer-social-list list">
-            <li class="footer-social-list-item">
-              <a
-                class="footer-social-list-link"
-                href="https://www.instagram.com/"
-                aria-label="Instagram"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <svg class="footer-social-list-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-list-item">
-              <a
-                class="footer-social-list-link link"
-                href="https://twitter.com/"
-                aria-label="Twitter"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <svg class="footer-social-list-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-list-item">
-              <a
-                class="footer-social-list-link link"
-                href="https://www.facebook.com/"
-                aria-label="Facebook"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <svg class="footer-social-list-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-list-item">
-              <a
-                class="footer-social-list-link link"
-                href="https://www.linkedin.com/"
-                aria-label="Linkedin"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <svg class="footer-social-list-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+
         <div class="footer-subscribe">
           <p class="footer-title">Subscribe</p>
           <form class="footer-input-form">
