--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
     <footer class="footer section">
       <div class="footer-wrapper conteiner">
         <div class="footer-conteiner">
-          <div class="footer-logo">
+          <div class="footer-logo fuck">
             <a class="link logo-dark-theme" href="./index.html"
               ><span class="logo-color-web">Web</span>Studio</a
             >
@@ -541,7 +541,7 @@
               digital marketing & growth solutions.
             </p>
           </div>
-          <div class="footer-social-media">
+          <div class="footer-social-media fuck">
             <p class="footer-title">Social media</p>
             <ul class="footer-social-list list">
               <li class="footer-social-list-item">
