--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
           >
         </li>
       </ul>
-      <ul class="social-list list">
+      <ul class="social-list-mobile list">
         <li class="social-list-item">
           <a
             class="social-list-link"
